# DecideAI

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_DECIDEAI.py  Dockerfile  GITHUB_PUSH_SUCCESS.md  HR_FINETUNING_GUIDE.md  INSTALL_LOCAL_LLM.md  LICENSE  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICK_START.md  RAG_INTEGRATION_SUMMARY.md  README.md  SERVER_COMMANDS.md  SETUP_COMPLETE.md  STANDALONE_DEPLOYMENT_STRATEGY.md  START_DECIDEAI.py  TESTING_GUIDE.md  TEST_DECIDEAI.py  USER_MANUAL.md  WARP.md  check_ollama_health.py  docker-compose.prod.yml  docker-compose.yml  final_confidence_test.py  init_system.py  production_readiness_check.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sample_employees.csv  setup.cfg  setup.py  simple_start.py  (+10 more)
.github/workflows/: ci.yml
.kiro/hooks/: accuracy-testing.kiro.hook  ai-code-analyzer.kiro.hook  model-training.kiro.hook  (+3 more)
ai_employee_decision_system/: __init__.py  __main__.py  cli.py
backend/: README.md  crud.py  database.py  deps.py  main.py  models.py  requirements.txt  schemas.py
configs/: base.yaml  dev.yaml
deployment/: README.md
docs/: RAG_INTEGRATION.md  RAG_QUICKSTART.md  user-guide.md
infra/: docker-compose.yml  env.example
ingestion/: pipeline.py
monitoring/: README.md
scripts/: curl_smoke.sh  deploy.sh  index.py  index_documents.py  init_db.py  init_project.py  install_ollama.py  run_tests.py  start_backend.py  test_api.py  validate_multilingual.py
tests/: conftest.py  test_config.py
(+132 files in other folders)
