[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decideai"
version = "0.1.0"
description = "DecideAI - simple plug-anywhere offline AI backend template"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [ { name = "DecideAI" } ]
dependencies = [
  # Core API and services
  "fastapi>=0.95.0",
  "sqlalchemy>=1.4.0,<2.0.0",
  "pydantic>=2.0.0",
  "alembic>=1.10.0",
  "python-multipart>=0.0.6",
  "pytesseract>=0.3.10",
  "pdf2image>=1.16.3",
  "pillow>=9.5.0",
  "onnxruntime>=1.14.0",
  "gradio>=3.32.0",
  "python-i18n>=0.3.9",
  "pyjwt>=2.6.0",
  "cryptography>=40.0.0",
  "uvicorn>=0.21.0",
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.3.0",
  "email-validator>=2.0.0",
  
  # Ingestion + vector store adapters
  "sentence-transformers>=2.2.2",
  "faiss-cpu>=1.8.0",
  "pymupdf>=1.22.0",
  "python-docx>=0.8.11",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
qdrant = [
  "qdrant-client>=1.7.0",
]

dev = [
  "pytest>=7.3.1",
  "pytest-cov>=4.1.0",
  "black>=23.3.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "mypy>=1.2.0",
]

[tool.setuptools.packages.find]
include = ["ai_employee_decision_system*"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\\.(pyi?)$'
exclude = '''
/(
    \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
